--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -537,6 +537,7 @@ config MEMORY_STATE_TIME
 	help
 	  Memory time statistics exported to /sys/kernel/memory_state_time
 
+source "drivers/misc/aw8697_haptic/Kconfig"
 source "drivers/misc/c2port/Kconfig"
 source "drivers/misc/eeprom/Kconfig"
 source "drivers/misc/cb710/Kconfig"
