--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -60,6 +60,7 @@ obj-$(CONFIG_PCI_ENDPOINT_TEST)	+= pci_endpoint_test.o
 
 obj-$(CONFIG_UID_SYS_STATS)	+= uid_sys_stats.o
 obj-$(CONFIG_MEMORY_STATE_TIME)	+= memory_state_time.o
+obj-$(CONFIG_AW8697_HAPTIC) += aw8697_haptic/
 obj-$(CONFIG_MEDIATEK_SOLUTION) += mediatek/
 
 lkdtm-$(CONFIG_LKDTM)		+= lkdtm_core.o
