--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -63,6 +63,8 @@ obj-$(CONFIG_MEMORY_STATE_TIME)	+= memory_state_time.o
 obj-$(CONFIG_AW8697_HAPTIC) += aw8697_haptic/
 obj-$(CONFIG_MEDIATEK_SOLUTION) += mediatek/
 
+obj-$(CONFIG_SIMTRAY_STATUS)	+= simtray.o
+
 lkdtm-$(CONFIG_LKDTM)		+= lkdtm_core.o
 lkdtm-$(CONFIG_LKDTM)		+= lkdtm_bugs.o
 lkdtm-$(CONFIG_LKDTM)		+= lkdtm_heap.o
