drivers: misc/mediatek: thermal: Import Xiaomi Changes
* from evergo-r-oss

Change-Id: I658ba46f46fceedecbdbec10742774b0ecf01313
Signed-off-by: rio004 <riyon336@gmail.com>

--- a/drivers/misc/mediatek/thermal/Makefile
+++ b/drivers/misc/mediatek/thermal/Makefile
@@ -37,6 +37,8 @@ ccflags-y  += -I$(srctree)/drivers/misc/mediatek/thermal/fakeHeader/
 ccflags-y  += -I$(srctree)/drivers/misc/mediatek/base/power/$(PDIR)
 ccflags-y  += -I$(srctree)/drivers/misc/mediatek/base/power/include/
 ccflags-y  += -I$(srctree)/drivers/misc/mediatek/base/power/include/gpufreq_v1/
+ccflags-y  += -I$(srctree)/drivers/misc/mediatek/flashlight/
+ccflags-y  += -I$(srctree)/drivers/misc/mediatek/include/mt-plat/
 
 obj-$(CONFIG_THERMAL) += mtk_thermal_monitor.o
 obj-$(CONFIG_THERMAL) += mtk_cooler_shutdown.o
